--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <input class="ano" type="number" name="txtano" id="txtano" min="0" maxlength="4">
             </p>
             <p>Sexo:
-                <input type="radio" name="radsex" id="masc" checked>
+                <input class="radio" type="radio" name="radsex" id="masc" checked>
                 <label for="masc">Masculino</label>
-                <input type="radio" name="radsex" id="fem">
+                <input class="radio" type="radio" name="radsex" id="fem">
                 <label for="fem">Feminino</label>
             </p>
             <p>
