--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section>
         <div>
             <p>Ano de Nascimento
-                <input class="ano" type="number" name="txtano" id="txtano" min="0" maxlength="4">
+                <input id="txtano" class="ano" type="number" name="txtano" id="txtano" min="0" maxlength="4">
             </p>
             <p>Sexo:
                 <input class="radio" type="radio" name="radsex" id="masc" checked>
@@ -23,7 +23,7 @@
                 <label for="fem">Feminino</label>
             </p>
             <p>
-                <input class="button" type="button" value="Verificar" onclick="verificar()">
+                <input id="button" class="button" type="button" value="Verificar" onclick="verificar()">
             </p>
         </div>
         <div id="res">
